@@ -1232,7 +1232,15 @@ cl_sortkey" ;
 					$t = $sk->makeLinkObj( $nnt, $t, '', '' , $prefix );
 					$wgLinkCache->resume();
 
-					$sortkey = $wasblank ? $this->mTitle->getPrefixedText() : $text;
+					if ( $wasblank ) {
+						if ( $this->mTitle->getNamespace() == NS_CATEGORY ) {
+							$sortkey = $this->mTitle->getText();
+						} else {
+							$sortkey = $this->mTitle->getPrefixedText();
+						}
+					} else {
+						$sortkey = $text;
+					}
 					$wgLinkCache->addCategoryLinkObj( $nt, $sortkey );
 					$this->mOutput->mCategoryLinks[] = $t ;
 					$s .= $prefix . $trail ;
